--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.8"
+    "@astrojs/preact": "^2.1.0",
+    "@astrojs/vercel": "^3.2.1",
+    "astro": "^2.1.8",
+    "preact": "^10.6.5"
   }
 }
