--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.2.0",
     "@astrojs/preact": "^2.1.0",
     "astro": "^2.1.8",
     "preact": "^10.6.5"
